--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
     "redux-immutable": "^4.0.0",
+    "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
