--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
+    "cookies": "^0.7.3",
+    "cookies-js": "^1.2.3",
     "css-loader": "0.28.7",
     "dotenv": "4.0.0",
     "eslint": "4.10.0",
@@ -50,6 +52,7 @@
     "redux": "^4.0.1",
     "redux-immutable": "^4.0.0",
     "redux-persist": "^5.10.0",
+    "redux-persist-cookie-storage": "^1.0.0",
     "redux-thunk": "^2.3.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
